--- a/labwork/labwork.tex
+++ b/labwork/labwork.tex
@@ -1,7 +1,7 @@
 \chapter{Experiment Design, Theory, and Results}
 
 Verifying the millimeter-wavelength absorption spectrum of SO$_2$ is important for the study of the atmosphere of Venus. Making measurements under simulated Venus conditions assures the accuracy of any model derived from such measurements.
- Described below is the theory, laboratory equipment, measurement procedure, and derived uncertainties in the measurements of the millimeter-wavelength absorptivity of gaseous sulfur dioxide under simulated Venus conditions.
+ We describe the theory, laboratory equipment, measurement procedure, and derived uncertainties in the measurements of the millimeter-wavelength absorptivity of gaseous sulfur dioxide under simulated Venus conditions.
 
 \section{Measurement Theory}
 
@@ -58,11 +58,11 @@ Q_{ext} = \frac{2Q^m}{\sqrt{t}}
 
 \section{Millimeter-Wavelength Measurement System}
 
-The high-sensitivity millimeter-wavelength system used for measuring the opacity of gaseous sulfur dioxide under Venus conditions is similar to the one used by Devaraj and Steffes \cite{Devaraj-2011} \cite{Devaraj-thesis}. The system is comprised of two subsystems for measuring different bands of the millimeter-wavelength spectrum (W-band/F-band). The simulator consists of a glass pressure chamber capable of withstanding up to 3 bars of pressure along with a temperature chamber capable of operating up to 400K. The W-band subsystem is used for measurements in the 2.7-4 millimeter-wavelength range while the F-band system is used for the 2-3 milimeter-wavelength range. The following sections describe each subsystem and their components. 
+The high-sensitivity millimeter-wavelength system used for measuring the opacity of gaseous sulfur dioxide under Venus conditions is similar to the one used by Devaraj and Steffes \cite{Devaraj-2011} \cite{Devaraj-thesis}. The system is comprised of two subsystems for measuring different bands of the millimeter-wavelength spectrum (W-band/F-band). The simulator consists of a glass pressure chamber capable of withstanding up to 3 bars of pressure along with a temperature chamber capable of operating up to 400 K. The W-band subsystem is used for measurements in the 2.7-4.0 millimeter-wavelength range while the F-band system is used for the 2-3 milimeter-wavelength range. The following sections describe each subsystem and their components. 
 
 \subsection{W-band Subsystem}
 
-The W-band measurement system is used to measure the 2.7-4 mm-wavelength properties of sulfur dioxide and shown in Figure \ref{fig:wbandimage}.
+The W-band measurement system is used to measure the 2.7-4.0 mm-wavelength properties of sulfur dioxide and shown in Figure \ref{fig:wbandimage}.
 
 A synthesized swept signal generator (HP 83650B) is used to generate a signal in the 12.5-18.3 GHz range which is fed to a times-six active multiplier chain (AMC) via low-loss, high frequency coaxial cables. The active multiplier then feeds the 75-110 GHz signals (swept over the range covered by each single resonance) to the Fabry-Perot resonator via WR-10 waveguides. The millimeter-wavelength radio frequency (RF) signal from the output port of the Fabry-Perot resonator (FPR) is fed via waveguide to a QuinStar Technology QMH series harmonic mixer. The local oscillator (LO) and the intermediate frequency (IF) are connected via an external diplexer. The harmonic mixer is locked to the 18th harmonic of the spectrum analyzer LO and is used in the ``external mixer'' mode with the spectrum analyzer (HP 8564E). 
 
@@ -84,7 +84,7 @@ is amplified and fed through a frequency tripler. The output of the tripler is f
 f_{LO} = \frac{f_{RF} - f_{IF}}{N_H	}
 \end{equation}
 
-\noindent where N$_H$ is the lowest integer such that $f_{lo} < 18 GHz$.
+\noindent where N$_H$ is the lowest integer such that $f_{lo} < 18$ GHzs.
 
 \begin{figure}[H]
     \centering
@@ -101,7 +101,7 @@ The data acquisition system consists of a computer connected to the spectrum ana
 
 The most important prerequisite for performing measurement of gas properties is ensuring a leak-proof system. This is done through two methods, the first method is by drawing a vacuum inside the FPR and verifying the integrity of the vacuum over time. The second method is by adding a positive pressure of CO$_2$ to the system and making sure there are no leaks in any of the connectors and valves. Ensuring a leak-proof system allows for not only precise measurements but also ensures no toxic gases are released into the testing environment.
 
-After the system is ensured to be leak-proof and at a stable temperature, a vacuum is drawn and a measurement is taken using the appropriate subsystem (W-band for 2.7-4 mm-wavelengths, F-band for 2-3 mm-wavelengths). This allows for a baseline measurement of the FPR's resonances and the Quality factor. Once this baseline is established the gas under test is added to the system.
+After the system is ensured to be leak-proof and at a stable temperature, a vacuum is drawn and a measurement is taken using the appropriate subsystem (W-band for 2.7-4.0 mm-wavelengths, F-band for 2-3 mm-wavelengths). This allows for a baseline measurement of the FPR's resonances and the Quality factor. Once this baseline is established the gas under test is added to the system.
 
 Once the gas temperature has stabilized, another set of tests measuring the resonant frequencies along with the quality factors is taken. More gas is added and the procedure is repeated until measurements at all suitable pressures are taken. A vacuum is drawn once again but this time it is pumped overnight due to the possibility of adsorption (or ``sticking'') of the gas being tested (SO$_2$) to metal surfaces inside the vessel. This second vacuum measurement is taken to measure any possible system drift.
 
