--- a/rtm/rtm.tex
+++ b/rtm/rtm.tex
@@ -86,7 +86,7 @@ R_{surf}(\theta) =& \frac{1}{2} \left[ \frac{\cos\theta - \sqrt{\epsilon_d/\eta_
 \end{equation}
 where $\theta$ is the transmission angle upward through the first atmospheric layer and $\eta_1$ is the index of refraction for the first atmospheric layer \cite{Jenkins-2002}. The dielectric constant of the surface $\epsilon_d$ is assumed to have a uniform value of $4.0$ \cite{Pettengill-1992}.
 
-If Equation \ref{eq:rtm-layers} is integrated over all angles of emission and divided by the number of samples taken, the Disk-Averaged brightness can be obtained. This is useful in comparing the model to full-disk observations made of Venus as well as producing residual plots of the planet. The residual plots can be used to find any discrepancies in the Venus atmosphere and allow for identification of atmospheric phenomenon. 
+If Equation \ref{eq:rtm-layers} is integrated over all angles of emission and divided by the number of samples taken, the disk-averaged brightness can be obtained. This is useful in comparing the model to full-disk observations made of Venus as well as producing residual plots of the planet. The residual plots can be used to find any discrepancies in the Venus atmosphere and allow for identification of atmospheric phenomenon. 
 
 It is also useful to know how each layer of the atmosphere affects the brightness temperature; this can be found through calculation of the weighting function,
 \begin{equation}
