--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -1,7 +1,7 @@
 \chapter{Summary and Conclusions}
-The objective of this Master's Thesis has been to advance the understanding of the millimeter-wavelength properties of gaseous sulfur dioxide under Venus conditions. Extensive laboratory measurements of the 2-4 mm-wavelength properties of sulfur dioxide under simulated upper troposphere conditions of Venus were conducted. These along with previous laboratory measurements (Fahd and Steffes \cite{Fahd-1991}, Suleiman et al. \cite{Suleiman-1996}, and Steffes et al. \cite{Steffes-2014}) have been used to validate absorption formalisms. A discussion of the significance of these results and future work are presented below. 
+The objective of this Thesis has been to advance the understanding of the millimeter-wavelength properties of gaseous sulfur dioxide under Venus conditions. Extensive laboratory measurements of the 2-4 mm-wavelength properties of sulfur dioxide under simulated upper troposphere conditions of Venus were conducted. These along with previous laboratory measurements (Fahd and Steffes \cite{Fahd-1991}, Suleiman et al. \cite{Suleiman-1996}, and Steffes et al. \cite{Steffes-2014}) have been used to validate absorption formalisms. A discussion of the significance of these results and future work are presented below. 
 
-With the approaching completion of the ESA Venus Express Mission, earth-based centimeter and millimeter-wavelength observations of Venus are becoming more important. Knowledge of the absorption properties of sulfur dioxide will be important in analyzing data from these earth-based observations. 
+With the approaching completion of the ESA Venus Express Mission, Earth-based centimeter and millimeter-wavelength observations of Venus are becoming more important. Knowledge of the absorption properties of sulfur dioxide will be important in analyzing data from these earth-based observations. 
 \section{Significant Results}
 
 Laboratory measurements taken of the millimeter-wavelength absorption of sulfur dioxide under Venus conditions has verified the formalism for sulfur dioxide opacity developed by Fahd and Steffes \cite{Fahd-1991}. The model is able to fit 85.88\% of the laboratory data (centimeter-wavelength done by Steffes et al. 2014 \cite{Steffes-2014}, millimeter-wavelength presented in this work) within $2\sigma$ uncertainty. The bounds verified by laboratory data are set to frequencies between 1-150 GHz, temperatures between 307-550 K, and concentrations between 0-100\% of SO$_2$/volume. 
@@ -10,9 +10,9 @@ Verifying that the Fahd and Steffes \cite{Fahd-1991} model correctly predicted t
 
 One such radio telescope is the Combined Array for Research in Millimeter-wave Astronomy (CARMA). Observations of Venus using CARMA have been recently completed by Devaraj \cite{Devaraj-CARMA} at frequencies ranging from 98-115 GHz. Using these maps, along with the RTM developed, maps of the variations observed can be produced. Variation in these maps can be used to identify anomalies in Venus's atmosphere such as storms or potential volcanic eruptions.
 
-Along with CARMA, other observations of Venus have been made. One such observation was done by Sagawa \cite{Sagawa-2008}. Sagawa mentions it is possible to extract abundance profiles for both SO$_2$ and H$_2$SO$_4$ from observations done at two different frequencies. This requires knowledge of the frequency dependence of the absorption from both gasses. While this work characterizes the absorption of SO$_2$, work is still needed to characterize H$_2$SO$_4$'s absorption spectrum in the millimeter-wavelength regime. 
+Along with CARMA, other observations of Venus have been made. One such observation was done by Sagawa \cite{Sagawa-2008}. Sagawa mentions it is possible to extract abundance profiles for both SO$_2$ and H$_2$SO$_4$ from observations done at two different frequencies. This requires knowledge of the frequency dependence of the absorption from both gasses. While this work characterizes the absorption of SO$_2$, work is still needed to characterize the absorption spectrum of H$_2$SO$_4$ in the millimeter-wavelength regime. 
 
-Sub-millimeter-wavelength observations were done with ALMA (Atacama Large Millimeter Array) in 2011 \cite{ALMA-2013}. These observations were the first high-resolution mapping of the day hemisphere at millimeter-wavelengths. They showed how the mesosphere was affected by solar-winds, the mesospheric water distribution, and the moderate equatorial zonal winds. Using this data along with the developed RTM and methods described in Sagawa \cite{Sagawa-2008}, it is possible to retrieve an abundance profile for multiple constituents of Venus' upper atmosphere.
+Sub-millimeter-wavelength observations were done with ALMA (Atacama Large Millimeter Array) in 2011 \cite{ALMA-2013}. These observations were the first high-resolution map of the day hemisphere at millimeter-wavelengths. They showed how the mesosphere was affected by solar-winds, the mesospheric water distribution, and the moderate equatorial zonal winds. Using this data along with the developed RTM and methods described in Sagawa \cite{Sagawa-2008}, it is possible to retrieve an abundance profile for multiple constituents of Venus' upper atmosphere.
 
 \section{Suggestions for Future Work}
 Many improvements can be made to the newly-developed RTM. The biggest is an accurate formalism for the millimeter-wavelength absorption of gaseous H$_2$SO$_4$. The formalism used in the current model was developed from centimeter-wavelength data. A new laboratory measurement system to better characterize gaseous H$_2$SO$_4$'s millimeter-wavelength absorption spectrum is being developed at Georgia Institute of Technology's Planetary Atmospheres Lab. These measurements, along with those from Kolodner et al. \cite{Kolodner-1998} should help develop a formalism for the gaseous H$_2$SO$_4$ absorption spectra at centimeter and millimeter-wavelengths. 
