Fixed Steffes et al. reference

--- a/Bellotti-Masters-thesis.tex
+++ b/Bellotti-Masters-thesis.tex
@@ -53,7 +53,7 @@
 %% The date the last committee member signs the thesis form. Printed
 %% on the approval page.
 %\approveddate{1 July 2010}
-\approveddate{TBD}
+\approveddate{5 November 2015}
 
 \bibfiles{bibliography}
 
