--- a/bibliography.bib
+++ b/bibliography.bib
@@ -180,12 +180,28 @@ author = "Bryan J. Butler and Paul G. Steffes and Shady H. Suleiman and Marc A. 
 }
 
 
-@article{Steffes-2014,
-title = "Laboratory Measurements of the 3.7-20 cm Wavelength Opacity of Sulfur Dioxide and Carbon Dioxide under Simulated Conditions for the Deep Atmosphere of Venus",
+@article{Bellotti-2015,
+title = "Laboratory Measurements of the Millimeter-Wavelength Sulfur Dioxide Absorption Spectrum under Simulated {V}enus Conditions",
+journal = "Icarus (in works)",
+year = "2015",
+author = "Amadeo Bellotti and Paul G. Steffes"
+}
+@article{Steffes-2015,
+title = "Laboratory measurements of the 3.7--20 cm wavelength opacity of sulfur dioxide and carbon dioxide under simulated conditions for the deep atmosphere of Venus ",
 journal = "Icarus ",
-year = "2014",
+volume = "245",
+number = "0",
+pages = "153 - 161",
+year = "2015",
 note = "",
-author = "Paul G. Steffes and Patrick Shahan and Garret C. Barisich and Amadeo Bellotti"
+issn = "0019-1035",
+doi = "http://dx.doi.org/10.1016/j.icarus.2014.09.012",
+url = "http://www.sciencedirect.com/science/article/pii/S0019103514004746",
+author = "Paul G. Steffes and Patrick Shahan and G. Christopher Barisich and Amadeo Bellotti",
+keywords = "Venus, atmosphere",
+keywords = "Radio observations",
+keywords = "Atmospheres, composition",
+keywords = "Spectroscopy "
 }
 
 @conference{Steffes-2012,
@@ -199,6 +215,17 @@ author = "Paul G. Steffes and Patrick Shahan and Garret C. Barisich and Amadeo B
     year      = "2012",
     month    = "October 18",
     note     = "Presented at the 44th Annual Meeting of the Division for Planetary Sciences of the American Astronomical Society"
+}
+@conference{Bellotti-2014,
+    author    = "Amadeo Bellotti and P.G. Steffes",
+    title     = {Laboratory Measurements of the Millimeter-Wavelength Sulfur Dioxide Absorption Spectrum under Simulated {V}enus Conditions},
+    booktitle = {Bulletin of the American Astronomical Society},
+    volume   = "46",
+    pages    = "113",
+    address  = "Tucson, Az",
+    year      = "2014",
+    month    = "November 12",
+    note     = "Presented at the 46th Annual Meeting of the Division for Planetary Sciences of the American Astronomical Society"
 }
 
 @conference{Steffes-2013,
