--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -1,10 +1,10 @@
 \chapter{Summary and Conclusions}
-The objective of this Thesis has been to advance the understanding of the millimeter-wavelength properties of gaseous sulfur dioxide under Venus conditions. Extensive laboratory measurements of the 2-4 mm-wavelength properties of sulfur dioxide under simulated upper troposphere conditions of Venus were conducted. These along with previous laboratory measurements (Fahd and Steffes \cite{Fahd-1991}, Suleiman et al. \cite{Suleiman-1996}, and Steffes et al. \cite{Steffes-2014}) have been used to validate absorption formalisms. A discussion of the significance of these results and future work are presented below. 
+The objective of this Thesis has been to advance the understanding of the millimeter-wavelength properties of gaseous sulfur dioxide under Venus conditions. Extensive laboratory measurements of the 2-4 mm-wavelength properties of sulfur dioxide under simulated upper troposphere conditions of Venus were conducted. These along with previous laboratory measurements (Fahd and Steffes \cite{Fahd-1991}, Suleiman et al. \cite{Suleiman-1996}, and Steffes et al. \cite{Steffes-2015}) have been used to validate absorption formalisms. A discussion of the significance of these results and future work are presented below. 
 
 With the approaching completion of the ESA Venus Express Mission, Earth-based centimeter and millimeter-wavelength observations of Venus are becoming more important. Knowledge of the absorption properties of sulfur dioxide will be important in analyzing data from these earth-based observations. 
 \section{Significant Results}
 
-Laboratory measurements taken of the millimeter-wavelength absorption of sulfur dioxide under Venus conditions has verified the formalism for sulfur dioxide opacity developed by Fahd and Steffes \cite{Fahd-1991}. The model is able to fit 85.88\% of the laboratory data (centimeter-wavelength done by Steffes et al. 2014 \cite{Steffes-2014}, millimeter-wavelength presented in this work) within $2\sigma$ uncertainty. The bounds verified by laboratory data are set to frequencies between 1-150 GHz, temperatures between 307-550 K, and concentrations between 0-100\% of SO$_2$/volume. 
+Laboratory measurements taken of the millimeter-wavelength absorption of sulfur dioxide under Venus conditions has verified the formalism for sulfur dioxide opacity developed by Fahd and Steffes \cite{Fahd-1991}. The model is able to fit 85.88\% of the laboratory data (centimeter-wavelength done by Steffes et al. \cite{Steffes-2015}, millimeter-wavelength presented in this work) within $2\sigma$ uncertainty. The bounds verified by laboratory data are set to frequencies between 1-150 GHz, temperatures between 307-550 K, and concentrations between 0-100\% of SO$_2$/volume. 
 \section{Application to Venus Observations}
 Verifying that the Fahd and Steffes \cite{Fahd-1991} model correctly predicted the absorption of SO$_2$ at centimeter and millimeter-wavelengths allows for analysis of earth-based observations from radio telescopes. Verifying the model has allowed for the development of a Radiative Transfer Model (RTM) which can successfully simulate and predict expected observations of Venus. 
 
