Fixed changes for submission

--- a/Bellotti-Masters-thesis.tex
+++ b/Bellotti-Masters-thesis.tex
@@ -44,7 +44,7 @@
 
 %% \major{Algorithms, Combinatorics, and Optimization} 
 
-\copyrightyear{2014}
+\copyrightyear{2015}
 \submitdate{May 2015} % Must be the month and year of graduation,
                          % not thesis approval! As of 2010, this means
                          % this text must be May, August, or December
@@ -53,9 +53,11 @@
 %% The date the last committee member signs the thesis form. Printed
 %% on the approval page.
 %\approveddate{1 July 2010}
-\approveddate{5 November 2015}
+\approveddate{5 November 2014}
 
 \bibfiles{bibliography}
+
+\copyrighttrue
 
 %% The following are the defaults
 %%    \titlepagetrue
@@ -104,7 +106,7 @@ The constant support and encouragement from my family has allowed me to pursue m
 %\end{summary}
 \end{preliminary}
 %%
-
+EFI
 \include{./intro/intro}
 %\include{./theory/theory}
 \include{./labwork/labwork}
@@ -132,8 +134,8 @@ The constant support and encouragement from my family has allowed me to pursue m
 %\end{vita}
 \end{postliminary}
 
-\begin{abstract}
-The objective of the proposed research is to develop a mathematical model that accurately estimates the opacity of sulfur dioxide in a carbon dioxide atmosphere under conditions characteristic of the Venus troposphere based on extensive laboratory measurements. High precision measurements of the millimeter-wavelength properties of sulfur dioxide are being conducted under multiple pressure and temperatures. These measurements are being conducted in both W-band and F-band (2-3 and 3-4 millimeter-wavelengths). The results of this research will significantly improve the understanding of the millimeter-wavelength emission spectrum of Venus and possibly determine the source of variations in the Venus millimeter-wavelength emissions. 
-\end{abstract}
+%\begin{abstract}
+%The objective of the proposed research is to develop a mathematical model that accurately estimates the opacity of sulfur dioxide in a carbon dioxide atmosphere under conditions characteristic of the Venus troposphere based on extensive laboratory measurements. High precision measurements of the millimeter-wavelength properties of sulfur dioxide are being conducted under multiple pressure and temperatures. These measurements are being conducted in both W-band and F-band (2-3 and 3-4 millimeter-wavelengths). The results of this research will significantly improve the understanding of the millimeter-wavelength emission spectrum of Venus and possibly determine the source of variations in the Venus millimeter-wavelength emissions. 
+%\end{abstract}
 
 \end{document}
